# bumfuzzle

./: .config  .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  __init__.py  bumfuzzle-template.yml  bumfuzzle.sh  bumfuzzle.yml  eval-rules.sh  go.mod  index.html  install-global-bumfuzzle.sh  install-global.sh  kickoff.sh  kickstart.sh  package.json  preflight.sh  pyproject.toml  schema.yml  settings.yml  test.sh  wizard.sh
.bumfuzzle/: config.yml
.github/workflows/: ci.yml  release-verify.yml  release.yml
Formula/: bumfuzzle.rb
cmd/bumfuzzle/: main.go
docs/: CONVENTIONS.md
domains/: config.sh  dependencies.sh  docker.sh  editor.sh  env.sh  git.sh  hooks.sh  lifecycle.sh  preflight-config.sh  rules.sh  structure.sh  user-rules.sh
internal/config/: config.go  config_test.go
internal/engine/: engine.go  engine_test.go
internal/lint/: lint.go  lint_test.go
internal/preflight/: preflight.go
internal/report/: report.go
presets/manifest/: maven-gradle.yml  pnpm.yml
presets/purpose/: backend.yml  frontend.yml  workspace.yml
scripts/: bumfuzzle.sh  bumfuzzle_server.py  eval-rules.sh  init.sh  install.sh  json_schema_validate.py  kickstart.sh  lib.sh  lint-config.sh  preflight.sh  prerequisites.sh  release.sh  reporting.sh  rule-runner.sh  run.sh  sync-skill.sh  test-init-run.sh  test-release-brew-deep.sh  test-release-brew-shallow.sh  test-schema.sh  test_release.sh  uninstall.sh  validate-schema.sh  wizard.sh
scripts/hooks/: commit-msg  hooks.sh  pre-commit
scripts/prerequisites/: duplicate-ids.sh  lib.sh  no-redundant-enabled-false.sh  (+11 more)
(+41 files in other folders)
